metadata/force-app/main/default/objects/CustomName_CwiIz__c/CustomName_CwiIz__c.object-meta.xml
<CustomObject>
    <description>Description_PXpyF</description>
    <label>CustomLabel_RCCgA</label>
    <nameField>
        <label>CustomLabel_RCCgA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_RCCgAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>