metadata/force-app/main/default/objects/CustomName_CwiIz__c/fields/CustomField_ARYZs__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ARYZs__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYymXJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>