metadata/force-app/main/default/objects/CustomName_CwiIz__c/fields/CustomField_Wtpai__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Wtpai__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldpzToP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>